Adicionei o registro com confirmação por email

--- a/API/accounts/templates/email.html
+++ b/API/accounts/templates/email.html
@@ -1,6 +1,6 @@
 {% autoescape off %}
 Olá {{ user.username }},
-Por favor utilize o código para confirmar sua redefinição de senha,
+Por favor utilize o código para confirmar ,
 
 AQUI ESTÁ SEU CÓDIGO {{codigo}}
 
